--- a/PS5-CHEME-5800-Student-Notebook-Fall-2025.ipynb
+++ b/PS5-CHEME-5800-Student-Notebook-Fall-2025.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "25550134-a286-4aa1-8aee-19a7bd80d1d4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "include(\"Include-solution.jl\");"
+    "include(\"Include-solution.jl\"); # include the files"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5ca18d71-b870-4cd1-a70b-821265f5de38",
    "metadata": {
     "tags": []
@@ -2578,15 +2578,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.12",
+   "display_name": "Julia 1.11.6",
    "language": "julia",
-   "name": "julia-1.12"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.12.1"
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
